[package]
name = "ccmp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.2"
ic-cdk = "0.10.0"
hex = "0.4.3"
ic-web3-rs = { git = "https://github.com/ivanlele/ic-web3-rs.git", tag="v0.5.0"}
ethabi = "17.2.0"
serde = { version = "1.0.180", features = ["derive"] }
async-trait = "0.1.72"
thiserror = "1.0.44"
sha3 = "0.10.8"
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.2"}
ic-cdk-timers = "0.4.0"
lazy_static = "1.4.0"
libsecp256k1 = "0.7.1"
futures = "0.3.28"
serde_json = "1.0.104"
slotmap = { version = "1.0.6", features = ["serde"] }
itertools = "0.11.0"
